[coverage:run]
branch = True
omit = setup.py
source = .

[flake8]
ignore = E203, E501, W503
max-line-length = 80
select = C,E,F,W,B,B950

[isort]
force_grid_wrap = 0
include_trailing_comma = True
known_django = django
line_length = 88
multi_line_output = 3
sections = FUTURE, STDLIB, DJANGO, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
use_parentheses = True

[tool:pytest]
norecursedirs = dist .eggs
python_files = test_*.py tests/*.py tests.py
addopts =
    --cov
    --no-cov-on-fail

[metadata]
author = Croud
author_email = tech@croud.co.uk
name = croud-client-credentials
version = 1.0dev0
description = Client Credentials Grant Helpers
long_description = file: README.rst
url = https://github.com/CroudTech/v3-python-client-credentials

[options]
include_package_data = True
install_requires =
    cacheout
    httpx
py_modules =
    client_credentials
